# Lifeguard

./: .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: FUNDING.yml
docs/: ADAPTER_MIGRATION_POLICY.md  FORWARD_DEVELOPMENT_PLAN.md  OPERATIONS_RUNBOOK.md
examples/: README.md  spec_local.json  write_report.py
scripts/: check_open_source_licenses.py  run_completion_validation.py
tests/: conftest.py  test_adapter_contract.py  test_adapter_contract_policy.py  test_adversarial_reports.py  test_adversarial_validation.py  test_checkpoint_store.py  test_cli_anchor.py  test_cli_compat.py  test_cli_compliance_pack_verify.py  test_cli_dashboard.py  test_cli_legislative_review.py  test_cli_profiles.py  test_compliance_pack.py  test_dashboard.py  test_docker_sandbox.py  test_evidence_store.py  test_extracts_adapter.py  test_langchain_compat_adapter.py  test_langgraph_compat_adapter.py  test_langgraph_runtime.py  test_legislative_review_pipeline.py  test_live_intelligence.py  test_mcp_compat_adapter.py  test_open_source_guardrails.py  test_output_contracts.py  test_owasp_controls.py  test_policy_compiler.py  test_release_workflow.py  test_runtime_policy_middleware.py  test_signing.py  test_sigstore_signing.py  test_spec_schema_legislative_review.py  test_spec_schema_profiles.py  test_threat_model.py  test_tool_execution.py  test_trust_source_profiles.py  test_verification_pipeline.py
trust_profiles/: managed_trust_profiles.json
validation/: .gitignore  COMPLETION_DECLARATION.md  COMPLETION_PLAN.md
(+59 files in other folders)
